# bl_downloader

./: .gitignore  AGENTS.md  README.md  README.zh.md  build.py  pyproject.toml  run.bat  run.sh
bl_downloader/: __main__.py  app.py  errors.py  types.py
bl_downloader/gui/: login_window.py
bl_downloader/services/: downloader.py  login.py  video_info.py
bl_downloader/utils/: ffmpeg.py
